ehnance process filtering by workers(nodes)
